
2020-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version bump to 4.0 (lt-version 5.0.0)
	* configure.ac: document the existing environment vars LIBCOB_CPPFLAGS,
	  LIBCOB_LIBS and COBC_LIBS and test if those actually work
	* Makefile.am (dist_noinst_SCRIPTS): moved doc/cobcinfo.sh here
	* extras/Makefile.am: use of return_path instead of atlocal

2020-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fix auto-setup for OCI via ORACLE_HOME

2019-12-01  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new options --with-indexed=odbc/oci, supporting
	  ODBC_CFLAGS ODBC_LIBS OCI_CFLAGS OCI_LIBS

2019-10-24  Ron Norman <rjn@inglenet.com> 

	* configure.ac: The -with-indexed now check that the handler had
	  also been include via -with-db|lmdb|cisam|disam|vbisam

2019-10-21  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated for multiple INDEXED file handlers
	  --with-indexed=db|lmdb|cisam|disam|vbisam defines default
	  handler. If multiple of C/D/VB-ISAM are used then they are 
	  built as a shared library and loaded at run time

2019-08-12  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for make

2019-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: changed the manual test runner to be a script handled
	  by autoconf instead of make
	* configure.ac: check for HAVE_MOUSEINTERVAL

2019-06-16  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (tarstamp.h, $(top_distdir)/tarstamp.h): targets added
	* Makefile.am: fixed SUBDIRS handling

2019-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* general: include all (possibly) generated headers by '#include <header>'
	  (search "system directories" [which in all known compilers are pre-fixed
	  with the ones specified with '-I', which is done for the builddir
	  already]) instead of '#include "header"' (which is searched next to the
	  including file first). This applies to all files that include config.h,
	  defaults.h, tarstamp.h, parser.h, ppparse.h.
