@@ -28,7 +28,7 @@ If you want to update to a newer automake/libtool version or get errors
 about wrong version numbers in m4 run "autoreconf -vfi -I m4" instead.
 
 For compiling (when changing flex/bison sources):
-  o Bison 2.3     (will be changed to 3.x after release of GnuCOBOL 3.1)
+  o Bison 3.0
   o Flex 2.5.35
 
 For generating the testsuite (when changing any .at files):
